--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>--Temperature Converter--</h1>
+        <h1>Temperature Converter</h1>
         <div class="temp"><label>Celcius</label><br>
             <input type="number" value="0" id="cel" class="inp">
         </div>
